# github-crawler

./: README.md  crawl.py  crawl_runs.sql  pyproject.toml  query_builder_logic.md  schema.sql
.github/workflows/: crawl.yml
dev_utils/: check_db.py  queries.py  reset_repositories_table.py
src/: __init__.py  config.py  main.py
src/application/: __init__.py  crawler_service.py  orchestrator.py  query_generator.py
src/domain/: __init__.py  entities.py  value_objects.py
src/infrastructure/: __init__.py  github_client.py  repo_storage.py
src/infrastructure/anti_corruption/: __init__.py  github_translator.py
