[project]
name = "github-crawler-stars"
version = "0.1.0"
description = "Crawls github to collect the stars for github repos"
authors = [
    {name = "Siddharth Sagar",email = "siddharth.538@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0" 
dependencies = [
    "gql[httpx] (>=3.5.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
